# demido-studio

./: .actrc  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  TODO.md  WEB_FEATURES.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  copilot-review.yml  release.yml
docs/: ARCHITECTURE.md  BACKEND.md  FRONTEND.md  README.md
scripts/: pack-skill.mjs
skills/demido-dev/: SKILL.md  skill.json
skills/skill-manager/: SKILL.md  skill.json  tools.json
skills/skill-manager/commands/: add-command.md  add-tool.md  convert-skill.md  inspect-skill.md  new-skill.md
skills/skill-manager/tools/: skill-spec.md
src/: App.css  App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  mcp.capability.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: caps.rs  caveman.rs  cli.rs  commands.rs  google_apis.rs  lib.rs  main.rs  prompt.rs  reset.rs  secrets.rs  skills.rs  sources.rs  streaming.rs  vars.rs  web.rs
src-tauri/src/agent/: executor.rs  mod.rs  permissions.rs
src-tauri/src/db/: accounts.rs  conversations.rs  local_models.rs  mcp_servers.rs  messages.rs  mod.rs  model_overrides.rs  providers.rs  settings.rs
src-tauri/src/local/: commands.rs  engine.rs  graphify.rs  hf.rs  mod.rs  python.rs  searxng.rs
src-tauri/src/mcp/: mod.rs  stdio.rs  types.rs
src-tauri/src/providers/: anthropic.rs  gemini.rs  mod.rs  openai_compat.rs  reasoning_channel.rs
src/components/: WindowControls.tsx
src/components/artifacts/: ArtifactPanel.tsx  JsonGraphViewer.tsx  JsonTreeViewer.tsx
src/components/auth/: AuthGate.tsx
src/components/chat/: AgentModeSelector.tsx  ArtifactCard.tsx  CavemanSelector.tsx  ChatHeader.tsx  ChatView.tsx  InputBar.tsx  MarkdownRenderer.tsx  MermaidBlock.tsx  MessageBubble.tsx  MessageList.tsx  ModelSelector.tsx  PermissionBubble.tsx  ReasoningSelector.tsx  SourcesList.tsx  SourcesPanel.tsx  TimelineStrip.tsx  ToolSelector.tsx  ToolSelectorPopup.tsx  WorkingFolderButton.tsx  useDropdown.ts
src/components/image-editor/: AdjustmentsPanel.tsx  Rulers.tsx  (+5 more)
src/lib/: attachments.test.ts  attachments.ts  caveman.test.ts  caveman.ts  constants.ts  parseArtifacts.ts  parseSources.test.ts  parseSources.ts  stripToolCalls.test.ts  stripToolCalls.ts  tauri.ts  utils.ts
src/stores/: artifacts.ts  attachmentCache.ts  builtinTools.test.ts  builtinTools.ts  conversations.ts  graphify.ts  imageEditor.ts  integrations.ts  mcpTools.ts  messages.ts  providers.ts  settings.ts  skills.test.ts  skills.ts  sourcePanel.test.ts  sourcePanel.ts  windowManager.test.ts  windowManager.ts
(+30 files in other folders)
