[package]
name = "demido-studio"
version = "0.1.0"
description = "Demido Studio — AI chat for everyone"
authors = []
edition = "2021"

[lib]
name = "demido_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
bytes = "1"
anyhow = "1"
walkdir = "2"
base64 = "0.22"
regex = "1"
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3"
