[package]
name = "demido-studio"
version = "0.6.1"
description = "Demido Studio — AI chat for everyone"
authors = []
edition = "2021"

[lib]
name = "demido_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
zip = "2"
flate2 = "1"
tar = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
bytes = "1"
anyhow = "1"
walkdir = "2"
ignore = "0.4"
base64 = "0.22"
regex = "1"
sha2 = "0.10"
getrandom = "0.2"
htmd = "0.1"
dirs = "6"
tauri-plugin-dialog = "2"
tauri-plugin-mcp = { git = "https://github.com/DaveDev42/tauri-plugin-mcp", optional = true }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[features]
# Dev-only MCP test-automation bridge. Pulls libspa-sys/libpipewire-0.3 on Linux, so
# it is OFF by default → CI + release never compile it (no pipewire dep needed).
# Enable for QA automation: `npm run tauri:mcp` (= tauri dev --features mcp-bridge).
mcp-bridge = ["dep:tauri-plugin-mcp"]

[target.'cfg(windows)'.dependencies]
# The release binary is windows_subsystem = "windows"; the CLI attaches to the parent console so
# its output is visible when run from a terminal.
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
